[RW-13428][risk=no] Added cron job for checking credit expiration (#8735)