@@ -10,8 +10,9 @@ import static org.mockito.Mockito.when;
 
 import com.google.cloud.tasks.v2.CloudTasksClient;
 import com.google.cloud.tasks.v2.Task;
-import com.google.common.collect.ImmutableList;
 import com.google.gson.Gson;
+import com.google.gson.reflect.TypeToken;
+import java.lang.reflect.Type;
 import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.Arrays;
@@ -41,6 +42,7 @@ import org.springframework.test.annotation.DirtiesContext;
 @DataJpaTest
 @DirtiesContext(classMode = DirtiesContext.ClassMode.BEFORE_EACH_TEST_METHOD)
 public class OfflineUserControllerTest {
+
   @Autowired private UserService mockUserService;
   @Autowired private OfflineUserController offlineUserController;
   @Autowired private CloudTasksClient mockCloudTasksClient;
@@ -58,6 +60,7 @@ public class OfflineUserControllerTest {
   })
   @MockBean({CloudTasksClient.class, UserService.class})
   static class Configuration {
+
     @Bean
     @Scope(ConfigurableBeanFactory.SCOPE_PROTOTYPE)
     WorkbenchConfig getWorkbenchConfig() {
@@ -79,6 +82,7 @@ public class OfflineUserControllerTest {
     workbenchConfig = WorkbenchConfig.createEmptyConfig();
     workbenchConfig.server.projectId = "test";
     workbenchConfig.server.appEngineLocationId = "us-central";
+    workbenchConfig.offlineBatch.usersPerCheckInitialCreditsExpirationTask = 2;
     workbenchConfig.offlineBatch.usersPerAuditTask = 2;
     workbenchConfig.offlineBatch.usersPerSynchronizeAccessTask = 3;
   }
@@ -112,9 +116,9 @@ public class OfflineUserControllerTest {
 
     // We set a batch size of 3, so we expect two cloud tasks.
     List<SynchronizeUserAccessRequest> expectedRequests =
-        ImmutableList.of(
-            new SynchronizeUserAccessRequest().userIds(ImmutableList.of(1L, 2L, 3L)),
-            new SynchronizeUserAccessRequest().userIds(ImmutableList.of(4L)));
+        List.of(
+            new SynchronizeUserAccessRequest().userIds(List.of(1L, 2L, 3L)),
+            new SynchronizeUserAccessRequest().userIds(List.of(4L)));
     for (SynchronizeUserAccessRequest expected : expectedRequests) {
       verify(mockCloudTasksClient)
           .createTask(
@@ -137,9 +141,9 @@ public class OfflineUserControllerTest {
 
     // Batch size is 2, so we expect 2 groups.
     List<AuditProjectAccessRequest> expectedRequests =
-        ImmutableList.of(
-            new AuditProjectAccessRequest().userIds(ImmutableList.of(1L, 2L)),
-            new AuditProjectAccessRequest().userIds(ImmutableList.of(3L, 4L)));
+        List.of(
+            new AuditProjectAccessRequest().userIds(List.of(1L, 2L)),
+            new AuditProjectAccessRequest().userIds(List.of(3L, 4L)));
     for (AuditProjectAccessRequest expected : expectedRequests) {
       verify(mockCloudTasksClient)
           .createTask(
@@ -155,5 +159,25 @@ public class OfflineUserControllerTest {
     return new Gson()
         .fromJson(
             t.getAppEngineHttpRequest().getBody().toStringUtf8(), AuditProjectAccessRequest.class);
+  }
+
+  @Test
+  public void testCheckInitialCreditsExpiration() {
+    offlineUserController.checkInitialCreditsExpiration();
+
+    // Batch size is 2, so we expect 2 groups.
+    List<List<Long>> expectedRequests = List.of(List.of(1L, 2L), List.of(3L, 4L));
+    for (List<Long> expected : expectedRequests) {
+      verify(mockCloudTasksClient)
+          .createTask(
+              matches(Pattern.compile(".*/checkCreditsExpirationForUserIDsQueue$")),
+              argThat(taskRequest -> expected.equals(cloudTaskToUserIdList(taskRequest))));
+    }
+    verifyNoMoreInteractions(mockCloudTasksClient);
+  }
+
+  private List<Long> cloudTaskToUserIdList(Task t) {
+    Type listType = new TypeToken<List<Long>>() {}.getType();
+    return new Gson().fromJson(t.getAppEngineHttpRequest().getBody().toStringUtf8(), listType);
   }
 }
